# EnterpriseComply

./: .replit  SECURITY.md  nixpacks.toml  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  replit.md
.agents/: agent_assets_metadata.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
artifacts/: PLATFORM_CHANGELOG.md
artifacts/api-server/: .swcrc  build.mjs  package.json  tsconfig.json
artifacts/api-server/policy-templates/: acceptable-use.md  access-control.md  ai-use.md  api-security.md  asset-management.md  audit-logging.md  backup-recovery.md  board-cybersecurity.md  business-continuity.md  change-management.md  clean-desk.md  cloud-security.md  cmmc-compliance.md  contingency-planning.md  (+39 more)
artifacts/c2s-ciop/: index.html  package.json  vite.config.ts
artifacts/ec-enclave-agent/: .gitkeep  Cargo.toml  Dockerfile
artifacts/ec-enclave-agent/src/: main.rs
attached_assets/: Pasted-CRITICAL-GAPS-Tier-1-Block-sales-without-these-1-Integr_1778117555339.txt  Pasted-Critical-gaps-deals-you-lose-today-Framework-Why-it-mat_1778127143303.txt  Pasted-EnterpriseComply-Comprehensive-Remediation-Readiness-Pl_1782513257362.txt  Pasted-P0-Platform-Breaking-blocks-real-use-1-No-evidence-file_1778120277231.txt  Pasted-You-are-a-principal-cloud-native-cybersecurity-architec_1778105792993.txt  Pasted-You-are-a-senior-frontend-engineer-and-elite-SaaS-produ_1778187906739.txt
docs/architecture/: SSO_DECISION.md  SSO_MIGRATION_PLAN.md
docs/runbooks/: PRODUCT_CUTOVER.md
lib/api-spec/: openapi.yaml
lib/db/: package.json
scripts/: ec-migrate.cjs  splice-policies.js
(+276 files in other folders)
