[package]
name = "ec-enclave-agent"
version = "1.0.0"
edition = "2021"
description = "EnterpriseComply eMASS Enclave Bridge Agent - DoD PKI mTLS, EDIPI enforcement, NIPRNet POA&M delivery"
authors = ["EnterpriseComply Platform <platform@enterprisecomply.com>"]

[[bin]]
name = "ec-enclave-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
rustls = "0.21"
rustls-pemfile = "1"
tokio-rustls = "0.24"
x509-parser = "0.15"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
